use python3.11 for mkdocs ci job

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,8 +16,8 @@ theme:
   name: "readthedocs"
 
 plugins:
-  - search
-  - mkdocstrings:
-      handlers:
-        python:
-          paths: [src]  # search packages in the src folder
+- search
+- mkdocstrings:
+    handlers:
+      python:
+        paths: [.]  # actually not needed, default
