--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,4 +19,4 @@ jobs:
           path: .cache
       - run: pip install -r requirements-dev.txt
       - run: mkdocs build
-      - run: mkdocs gh-deploy --config-file mkdocs.yml
+      - run: mkdocs gh-deploy --config-file mkdocs.yml --force
