--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 site
-src/nanoswap
-src/generated/tmp
+ipfskvs/nanoswap
+ipfskvs/generated/tmp
 .DS_Store
 
 # Byte-compiled / optimized / DLL files
